--- a/src/components/routes/index/PageIndex.astro
+++ b/src/components/routes/index/PageIndex.astro
@@ -2,10 +2,18 @@
 import Categorias from "./Categorias.astro"
 import Trabajos from "./Trabajos.astro"
 import HeaderMobile from "../../HeaderMobile.astro"
+import showdown from 'showdown';
+
+// Realizar la solicitud desde Node.js al API
+const response = await fetch('https://jobs-server-production.up.railway.app/api/home');
+const { latestJobs, categories } = await response.json();
+
+// Inicializar showdown para convertir Markdown a HTML
+const converter = new showdown.Converter();
 ---
 
 <HeaderMobile title="Inicio" />
 <div class="mt-6">
-    <Categorias />
+    <Categorias categories={categories} />
 </div>
-<Trabajos />
+<Trabajos latestJobs={latestJobs} converter={converter} />
