--- a/src/components/routes/index/Trabajos.astro
+++ b/src/components/routes/index/Trabajos.astro
@@ -1,16 +1,9 @@
 ---
-import showdown from 'showdown';
-
-// Realizar la solicitud desde Node.js al API
-const response = await fetch('https://jobs-server-production.up.railway.app/api/home');
-const { latestJobs, categories } = await response.json();
-
-// Inicializar showdown para convertir Markdown a HTML
-const converter = new showdown.Converter();
+const { latestJobs, converter } = Astro.props
 ---
 <div class="w-full">
     <h2 class="font-bold text-lg my-4">Trabajos recién agregados</h2>
-    <ul id="job-list" class="grid grid-cols-1 lg:grid-cols-2 lg:gap-4">
+    <ul id="job-list" class="grid grid-cols-1 lg:grid-cols-2 lg:gap-4 xl:grid-cols-3">
         {latestJobs.map((job) => (
             <li class="flex">
                 <a href={`/empleo/${job.id}`} class="w-full">
