--- a/src/pages/categoria/[categoria].astro
+++ b/src/pages/categoria/[categoria].astro
@@ -1,22 +1,32 @@
 ---
+import Layout from "../../layouts/Layout.astro";
+import Header from "../../components/Header.astro";
+import PageCategorias from "../../components/routes/categorias/PageCategorias.astro";
 const { categoria } = Astro.params;
 
 // Hacer la solicitud a la API del servidor local para obtener los trabajos de la categoría
 const response = await fetch(`https://jobs-server-production.up.railway.app/categoria/${categoria}`);
 // const response = await fetch(`http://localhost:3000/categoria/${categoria}`);
 const jobs = await response.json();
+
+
+// Función para capitalizar la primera letra de la categoría
+const capitalize = (str) => str.charAt(0).toUpperCase() + str.slice(1).toLowerCase();
+
+// Crear una nueva variable para almacenar la categoría capitalizada
+const capitalizedCategoria = capitalize(categoria);
+
+const title = `Categoria: ${capitalizedCategoria} |`
+const description = `Página de la categoria "${capitalizedCategoria} en Cumbre.icu"`
+const canonicalUrl = `https://cumbre.icu/categoria/${categoria}`
 ---
 
-<h1>Trabajos para la categoría: {categoria}</h1>
-
-<ul>
-    {jobs.map((job) => (
-        <li>
-            <a href={`/empleo/${job.id}`}>
-                <h2>{job.title}</h2>
-                <p>{job.company}</p>
-                <p>{job.location}</p>
-            </a>
-        </li>
-    ))}
-</ul>
+<Layout title={title} description={description} canonicalUrl={canonicalUrl}>
+	<main class="flex w-full">
+		<Header />
+		<h1 class="hidden">Inicio</h1>
+		<div class="p-3 pb-[60px] lg:ml-[25%] xl:ml-[20%] lg:p-6 w-full">
+			<PageCategorias categorias={jobs} categoria={capitalizedCategoria} />
+		</div>
+	</main>
+</Layout>
