--- a/src/components/routes/ayuda/PageAyuda.astro
+++ b/src/components/routes/ayuda/PageAyuda.astro
@@ -1,5 +1,5 @@
-<section>
-    <div class="text-center my-10">
+<section class="lg:flex lg:items-center lg:justify-between lg:my-10">
+    <div class="text-center my-10 lg:w-[50%]">
         <h1 class="font-bold text-3xl mb-2">Acerca de Cumbre</h1>
         <p class="text-sm mb-3">
             Cumbre es una plataforma que te facilitará l taarea de buscar empleo
@@ -10,8 +10,8 @@
             >
         </a>
     </div>
-    <div class="w-full flex justify-center mb-10">
-        <img class="w-[70%]" src="https://placehold.co/400x300.png" alt="" />
+    <div class="w-full flex justify-center mb-10 lg:w-[50%] lg:mb-0">
+        <img class="w-[70%] lg:w-full" src="https://placehold.co/400x300.png" alt="" />
     </div>
 </section>
 
