--- a/src/pages/ayuda.astro
+++ b/src/pages/ayuda.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import PageAyuda from "../components/routes/ayuda/PageAyuda.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Ayuda |" description="Encuentra ayuda para Cumbre", canonicalUrl="https://cumbre.icu/ayuda">
@@ -9,6 +10,7 @@ import PageAyuda from "../components/routes/ayuda/PageAyuda.astro";
 		<Header />
 		<div class="p-3 w-full pb-[60px] lg:ml-[25%] xl:ml-[20%] lg:p-6">
 			<PageAyuda />
+			<Footer />
 		</div>
 	</main>
 </Layout>
