--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
 <footer class="w-full text-center my-5 text-sm">
-    <p>© <a class="font-bold" href="https://cumbre.icu/">Cumbre.icu</a>, creada por <a class="font-bold" href="https://github.com/manueloff14">Manuel Cabrera</a></p>
+    <p>© <a class="font-bold" href="https://cumbre.icu/">Cumbre.icu</a>, fundada por <a class="font-bold" href="https://github.com/manueloff14">Manuel Cabrera</a></p>
 </footer>
