--- a/src/components/routes/ayuda/PageAyuda.astro
+++ b/src/components/routes/ayuda/PageAyuda.astro
@@ -2,8 +2,8 @@
     <div class="text-center my-10 lg:w-[50%]">
         <h1 class="font-bold text-3xl mb-2">Acerca de Cumbre</h1>
         <p class="text-sm mb-3">
-            Cumbre es una plataforma que te facilitará l taarea de buscar empleo
-        </p>
+            Cumbre te facilita la búsqueda de empleo con vacantes claras y accesibles.
+        </p>        
         <a href="" class="text-sm">
             <button class="bg-white text-black font-bold p-2 px-4 rounded-xl"
                 >más</button
@@ -46,27 +46,52 @@
             <button class="toggle-btn">
                 <h3>¿Cumbre es gratis?</h3>
             </button>
-            <p class="answer">Sí, Cumbre es totalmente gratis</p>
+            <p class="answer">Sí, Cumbre es totalmente gratis.</p>
         </li>
         <li>
             <button class="toggle-btn">
-                <h3>¿Cumbre es gratis?</h3>
+                <h3>¿Necesito registrarme para usar Cumbre?</h3>
             </button>
-            <p class="answer">Sí, Cumbre es totalmente gratis</p>
+            <p class="answer">No, no necesitas registrarte ni proporcionar datos personales para ver las vacantes. Simplemente entra en Cumbre.icu y comienza a buscar tu empleo ideal.</p>
         </li>
         <li>
             <button class="toggle-btn">
-                <h3>¿Cumbre es gratis?</h3>
+                <h3>¿Cómo puedo aplicar a una vacante que encuentro en Cumbre?</h3>
             </button>
-            <p class="answer">Sí, Cumbre es totalmente gratis</p>
+            <p class="answer">Cumbre actúa como intermediario. Cuando encuentres una vacante que te interese, haz clic en "Aplicar ahora" y serás redirigido al sitio web original donde está publicada la oferta para que completes el proceso de postulación.</p>
         </li>
         <li>
             <button class="toggle-btn">
-                <h3>¿Cumbre es gratis?</h3>
+                <h3>¿Cumbre almacena mis datos personales?</h3>
             </button>
-            <p class="answer">Sí, Cumbre es totalmente gratis</p>
+            <p class="answer">No, Cumbre no solicita ni almacena ningún dato personal. Puedes navegar y buscar empleos sin registrarte ni compartir información personal.</p>
+        </li>
+        <li>
+            <button class="toggle-btn">
+                <h3>¿Puedo filtrar las vacantes según mis intereses?</h3>
+            </button>
+            <p class="answer">Sí, Cumbre te permite filtrar vacantes según categorías, ubicaciones y otros criterios para que encuentres el empleo que mejor se adapte a tus intereses.</p>
+        </li>
+        <li>
+            <button class="toggle-btn">
+                <h3>¿Qué tipo de empleos puedo encontrar en Cumbre?</h3>
+            </button>
+            <p class="answer">En Cumbre puedes encontrar una amplia variedad de empleos en diferentes sectores como tecnología, administración, salud, entre otros, a nivel nacional en Colombia.</p>
+        </li>
+        <li>
+            <button class="toggle-btn">
+                <h3>¿Cumbre verifica las vacantes publicadas?</h3>
+            </button>
+            <p class="answer">Cumbre recopila e indexa las vacantes de diversas fuentes en línea, pero no se encarga de verificar directamente las ofertas. Te recomendamos siempre revisar los detalles en el sitio web oficial de la oferta.</p>
+        </li>
+        <li>
+            <button class="toggle-btn">
+                <h3>¿Cómo puedo contactar a Cumbre si tengo una pregunta o problema?</h3>
+            </button>
+            <p class="answer">Puedes contactar a Cumbre a través del formulario de contacto en nuestro sitio web o enviando un correo electrónico a soporte@cumbre.icu.</p>
         </li>
     </ul>
+    
 
     <script>
         const buttons = document.querySelectorAll(".toggle-btn");
