--- a/src/components/routes/index/Trabajos.astro
+++ b/src/components/routes/index/Trabajos.astro
@@ -61,7 +61,7 @@ const { latestJobs, converter } = Astro.props
                                             fill="#ffffff"></path>
                                     </g>
                                 </svg>
-                                Tiempo completo
+                                {job.tiempo}
                             </li>
                         </ul>
                     </div>
