--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,7 +55,7 @@ const { title, description, canonicalUrl } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title} Cumbre</title>
+		<title>{title} Cumbre Empleos</title>
 		<style>
 			* {
 				transition: 0.3s;
