--- a/src/components/routes/index/PageIndex.astro
+++ b/src/components/routes/index/PageIndex.astro
@@ -5,7 +5,7 @@ import HeaderMobile from "../../HeaderMobile.astro"
 import showdown from 'showdown';
 
 // Realizar la solicitud desde Node.js al API
-const response = await fetch('https://jobs-server-production.up.railway.app/api/home');
+const response = await fetch('https://cumbre-server.onrender.com/api/home');
 const { latestJobs, categories } = await response.json();
 
 // Inicializar showdown para convertir Markdown a HTML
