--- a/src/pages/categoria/[categoria].astro
+++ b/src/pages/categoria/[categoria].astro
@@ -5,7 +5,7 @@ import PageCategorias from "../../components/routes/categorias/PageCategorias.as
 const { categoria } = Astro.params;
 
 // Hacer la solicitud a la API del servidor local para obtener los trabajos de la categoría
-const response = await fetch(`https://jobs-server-production.up.railway.app/categoria/${categoria}`);
+const response = await fetch(`https://cumbre-server.onrender.com/categoria/${categoria}`);
 // const response = await fetch(`http://localhost:3000/categoria/${categoria}`);
 const jobs = await response.json();
 
