--- a/src/components/routes/ayuda/PageAyuda.astro
+++ b/src/components/routes/ayuda/PageAyuda.astro
@@ -11,7 +11,7 @@
         </a>
     </div>
     <div class="w-full flex justify-center mb-10 lg:w-[50%] lg:mb-0">
-        <img class="w-[70%] lg:w-full" src="https://placehold.co/400x300.png" alt="" />
+        <img class="w-[70%] lg:w-full rounded-3xl" src="/img/mock-cumbre-inicio.png" alt="" />
     </div>
 </section>
 
