img de /ayuda modificada y btn más ocultado

--- a/src/components/routes/ayuda/PageAyuda.astro
+++ b/src/components/routes/ayuda/PageAyuda.astro
@@ -4,7 +4,7 @@
         <p class="text-sm mb-3">
             Cumbre te facilita la búsqueda de empleo con vacantes claras y accesibles.
         </p>        
-        <a href="" class="text-sm">
+        <a href="" class="hidden text-sm">
             <button class="bg-white text-black font-bold p-2 px-4 rounded-xl"
                 >más</button
             >
