img de /ayuda modificada y btn más ocultado y ultima pregunta ocultada

--- a/src/components/routes/ayuda/PageAyuda.astro
+++ b/src/components/routes/ayuda/PageAyuda.astro
@@ -84,7 +84,7 @@
             </button>
             <p class="answer">Cumbre recopila e indexa las vacantes de diversas fuentes en línea, pero no se encarga de verificar directamente las ofertas. Te recomendamos siempre revisar los detalles en el sitio web oficial de la oferta.</p>
         </li>
-        <li>
+        <li class="hidden">
             <button class="toggle-btn">
                 <h3>¿Cómo puedo contactar a Cumbre si tengo una pregunta o problema?</h3>
             </button>
