img de /ayuda modificada y btn más ocultado y ultima pregunta ocultada

--- a/src/components/routes/ayuda/PageAyuda.astro
+++ b/src/components/routes/ayuda/PageAyuda.astro
@@ -66,7 +66,7 @@
             </button>
             <p class="answer">No, Cumbre no solicita ni almacena ningún dato personal. Puedes navegar y buscar empleos sin registrarte ni compartir información personal.</p>
         </li>
-        <li>
+        <li class="hidden">
             <button class="toggle-btn">
                 <h3>¿Puedo filtrar las vacantes según mis intereses?</h3>
             </button>
